# DevOps_project

./: .editorconfig  .flake8  Makefile  README.rst  pyproject.toml
Core/: manage.py
Core/DevOps_project/: asgi.py  urls.py  wsgi.py
Core/DevOps_project/settings/: __init__.py  base.py  docker.py  envvars.py  logging.py
Core/DevOps_project/settings/templates/: settings.dev.py
Core/core/utils/: collections.py  misc.py  settings.py
